# macropad-bot

./: docker-compose.yml
client/: .gitignore  installer.py  keys.toml  pyproject.toml
client/client/: client.py  main.py
server/: .gitignore  Dockerfile  Dockerfile.new  docker-compose.yml  pyproject.toml
server/server/: clips.py  disc.py  macropad_bot.py  main.py  ngrok.py  rabbit.py  upload.py
