[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Filippo <filippo.nardini@studio.unibo.it>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
pynput = "^1.7.6"
typer = "^0.4.1"
rabbitpy = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
